[gd_scene load_steps=9 format=3 uid="uid://blpfqo6ud5bxq"]

[ext_resource type="Script" uid="uid://bxsxxr032gwsw" path="res://Script/Enemy.gd" id="1_h0dic"]
[ext_resource type="Texture2D" uid="uid://b82toshnnc08d" path="res://Assets/Planes/Enemy.png" id="2_jy6qf"]
[ext_resource type="Texture2D" uid="uid://djvaj760c4r61" path="res://Assets/Textures/MuzzleFlash.png" id="3_jy6qf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_le5ry"]
size = Vector2(51, 60)

[sub_resource type="Animation" id="Animation_le5ry"]
resource_name = "MuzzleFlash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flash:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0872665]
}

[sub_resource type="Animation" id="Animation_6frff"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Flash:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o55y1"]
_data = {
&"MuzzleFlash": SubResource("Animation_le5ry"),
&"RESET": SubResource("Animation_6frff")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_6frff"]
radius = 980.002

[node name="Enemy" type="CharacterBody2D"]
script = ExtResource("1_h0dic")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_le5ry")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -1.5708
scale = Vector2(3, 3)
texture = ExtResource("2_jy6qf")

[node name="GunPos" type="Marker2D" parent="."]
position = Vector2(-25, 0)

[node name="MuzzleFlash" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_o55y1")
}

[node name="Flash" type="Sprite2D" parent="."]
texture = ExtResource("3_jy6qf")
offset = Vector2(-25, 0)

[node name="Detection" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource("CircleShape2D_6frff")

[node name="ShotSpeed" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[connection signal="body_entered" from="Detection" to="." method="_on_detection_body_entered"]
[connection signal="timeout" from="ShotSpeed" to="." method="_on_shoot_speed_timeout"]
